<resources>
    <string name="app_name">fitfo</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="add_friend">Kết bạn</string>
    <string name="wait_accept_friendship">Đã gửi</string>
    <string name="accept_friendship">Chấp nhận</string>
    <string name="destroy_friendship">Xóa bạn</string>
    <string name="chat">Nhắn tin</string>

    <string name="login">Đăng nhập</string>
    <string name="register">Đăng ký</string>
    <string name="change_password">Đổi mật khẩu</string>

    <string name="forgot_password">Quên mật khẩu</string>
    <string name="remember_password">Nhớ mật khẩu</string>
    <string name="old_password">Mật khẩu cũ</string>
    <string name="new_password">Mật khẩu mới</string>
    <string name="password">Mật khẩu</string>
    <string name="phone_number">Số điện thoại</string>
    <string name="checkbox_agree">Bạn đồng ý với chính sách của chúng tôi</string>
    <string name="confirm_password">Nhập lại mật khẩu</string>
    <string name="confirm_new_password">Nhập lại mật khẩu mới</string>
    <string name="user_name">Tên người dùng</string>
    <string name="email">Email</string>
    <string name="help">Trợ giúp</string>
    <!--    <string name="help">Trợ giúp</string>-->

</resources>