<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Authentication.ChangePassword"
    android:background="@color/background"
    android:orientation="vertical">
  <androidx.appcompat.widget.LinearLayoutCompat
      android:layout_width="match_parent"
      android:layout_height="60dp"
      android:layout_alignParentTop="true"
      android:background="@drawable/shape_background_color">
    <ImageView
        android:id="@+id/btn_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginRight="5dp"
        android:padding="10dp"
        android:src="@drawable/b_back_white" />
    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="Đổi mật khẩu"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="10dp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="20dp"/>
  </androidx.appcompat.widget.LinearLayoutCompat>

  <com.google.android.material.textfield.TextInputLayout
      android:id="@+id/layout_old_input_password"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginHorizontal="30dp"
      android:layout_marginTop="30dp"
      app:helperTextTextColor="@color/red">

    <EditText
        android:id="@+id/old_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/old_password"
        android:inputType="textPassword"
        app:layout_constraintHorizontal_bias="0.3" />
  </com.google.android.material.textfield.TextInputLayout>

  <com.google.android.material.textfield.TextInputLayout
      android:id="@+id/layout_new_input_password"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginHorizontal="30dp"
      android:layout_marginTop="30dp"
      app:helperTextTextColor="@color/red">
    <EditText
        android:id="@+id/new_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/new_password"
        android:inputType="textPassword"
        app:layout_constraintHorizontal_bias="0.5" />

  </com.google.android.material.textfield.TextInputLayout>
  <com.google.android.material.textfield.TextInputLayout
      android:id="@+id/layout_confirm_new_password"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginHorizontal="30dp"
      android:layout_marginTop="30dp"
      app:helperTextTextColor="@color/red">
    <EditText
        android:id="@+id/confirm_new_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/confirm_new_password"
        android:inputType="textPassword"
        app:layout_constraintHorizontal_bias="0.5" />

  </com.google.android.material.textfield.TextInputLayout>
  <Button
      android:id="@+id/btn_change_password"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="40dp"
      android:text="@string/change_password"
      android:layout_gravity="center"
      app:layout_constraintHorizontal_bias="0.5"/>
</LinearLayout>